mi primer commit

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,26 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- Metadatos -->
   <meta charset="utf-8">
-  <title>Felipecorzin</title>
-  <base href="/">
+  <meta name="author" content="Felipe Díaz">
+  <meta name="description" content="Portafolio de desarrollador web de Felipe Díaz">
+  <meta name="keywords" content="HTML, CSS, JavaScript, React">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Titulo -->
+  <title>Felipe Díaz | Desarrollo Web Front-End</title>
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="./assets/imagenes/logo_small.png">
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&amp;family=Rubik+Dirt&amp;family=Share+Tech+Mono&amp;display=swap" rel="stylesheet">
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVIzjzzJWLG7_uuEk1pu8RVKr-0V2S1rI"></script>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
